# socratic-bot

./: .gitignore  README.md  change_analysis.py  pyproject.toml  python.code-workspace
.github/workflows/: deploy.yaml
jsprojs/farcaster/: package.json  pnpm-lock.yaml  tsconfig.json
jsprojs/farcaster/src/: config.ts  index.ts
jsprojs/farcaster/src/services/: chatserver.ts  neynar.ts
jsprojs/mvp/: package.json  server.js
jsprojs/mvp/app/: prisma.server.ts
jsprojs/mvp/app/models/: interview.model.ts  interview.server.ts  user.server.ts
jsprojs/mvp/app/routes/: _index.tsx  complete-login.tsx  email-sent.tsx  login.tsx  logout.tsx  me.tsx
jsprojs/mvp/app/services/: auth.server.ts  email-strategy.server.ts  email.server.tsx  session.server.ts
jsprojs/mvp/prisma/: schema.prisma
magictool/: package.json
magictool/src/: App.tsx
pydocs/: pyproject.toml
pydocs/docs/: conf.py  index.rst
pydocs/docs/_templates/autosummary/: module.rst
pydocs/docs/design/: chat.rst
pydocs/docs/getting-started/: develop.rst  setup.rst
pylibs/chat/: pyproject.toml
pylibs/chat/socratic/chat/: __init__.py  continuous_executor.py  conversation_model.py  entry.py  event_logging.py  generation_scope.py  interface.py  schemas.py  step_executor.py  workflow.py  workflow_model.py
pylibs/chat/socratic/chat/commands/: docs.py  run.py  steprun.py
pylibs/chat/socratic/chat/utils/: base_prompts.py  socratic_chat_openai.py  typing.py
pylibs/chat/tests/: model_prime_counter.py  test_argmatch.py  test_continuous_executor.py  test_event_logging.py  test_generation_scope.py  test_is_json_safe.py
pylibs/zoo/: pyproject.toml
pylibs/zoo/socratic/zoo/: dfs_v1.py  dfs_v1.yml  dfs_v2.py  dfs_v2.yml
pyprojs/chatserver/: Dockerfile  alembic.ini  pyproject.toml
pyprojs/chatserver/alembic/: env.py
pyprojs/chatserver/alembic/versions/: 4254519e8246_.py  4357869ceb77_.py
pyprojs/chatserver/socratic/chatserver/: __main__.py  app.py
pyprojs/chatserver/socratic/chatserver/storage/: __init__.py  base.py  memory.py  postgres.py
pyprojs/telegram/: Dockerfile  lint.sh  pyproject.toml  run.sh
pyprojs/telegram/socratic/telegram/: __main__.py  bot.db  interaction.py  logutil.py  runtime.py  topic.cfg.yaml
pyprojs/telegram/tests/: test_placeholder.py
