[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "socratic-docs"
version = "0.1.0"
description = "Socratic Docs"
authors = ["Schrenk, Veronica <veronica@socratic.bot>"]
readme = "README.md"
packages = [
  { include = "socratic" }
]

[tool.poetry.dependencies]
python = "^3.11"
socratic-chat = { path = "../pylibs/chat", develop = true }
socratic-zoo = { path = "../pylibs/zoo", develop = true }
setuptools = "^69.1.1"

[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
sphinx-book-theme = "^1.1.2"
